# impl_blake3

./: .gitignore  Cargo.toml  compare_compress.rs  test_ref.rs
BLAKE3/src/: portable.rs
docs/: book.toml
docs/src/: SCOPE.md  SUMMARY.md
docs/src/_daily/: 1_Mar.md  28_Feb.md
src/: error.rs  lib.rs
