[package]
name = "blake3_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
thiserror = "2.0.18"
tracing = {version = "0.1.44", optional= true}
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[features]
default = []
enable_tracing = ["dep:tracing"]

[dev-dependencies]
rand = "0.10.0"
blake3 = "1"